<resources>
    <string name="app_name">latihanCh4</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum"></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="prompt_email">Masukkan Email</string>
    <string name="prompt_password">Masukkan Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Belum punya akun?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="prompt_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="prompt_username">Masukkan Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--    string untuk update note-->
    <string name="update_note">Update</string>
    <string name="action_logout">Logout</string>
    <string name="save_note">Save</string>
</resources>